# NuView

./: .gitignore  pyproject.toml
icecube_event_viewer/: __init__.py  geometry.py  sql.py
notebooks/: example.ipynb
nuview/: geometry.py  viewer.py
