[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nuview"
version = "0.1.0"
description = "Interactive 3-D IceCube event visualisation with Plotly"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "pandas",
    "plotly>=5.0",
]

[project.optional-dependencies]
export = ["kaleido"]  # needed for PNG/PDF/SVG export

[tool.hatch.build.targets.wheel]
packages = ["nuview"]

[tool.hatch.build.targets.wheel.force-include]
"nuview/data/sensor_geometry.csv" = "nuview/data/sensor_geometry.csv"
